--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #009688;
+    background-color: #cd8d00;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -83,7 +83,7 @@ section h2 {
 }
 
 .adopt-btn {
-    background-color: #009688;
+    background-color: #cd8d00;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -92,7 +92,7 @@ section h2 {
 }
 
 .adopt-btn:hover {
-    background-color: #00796b;
+    background-color: #cd8d00;
 }
 
 form {
@@ -110,7 +110,7 @@ form input, form select {
 }
 
 form button {
-    background-color: #009688;
+    background-color: #cd8d00;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -119,7 +119,7 @@ form button {
 }
 
 form button:hover {
-    background-color: #00796b;
+    background-color: #cd8d00;
 }
 
 footer {
